--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="exception_message_no_connection">There is no internet connection</string>
     <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
     <string name="string_content_description">Non accessible view</string>
+    <string name="btn_text_load_data">Load Restaurant List</string>
+    <string name="btn_text_retry">Retry</string>
+    <string name="activity_title_restaurant_list">Restaurant List</string>
+    <string name="activity_title_restaurant_details">Restaurant Details</string>
 
 </resources>
